kubernetes/applications/edge-service/production/patch-checks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      containers:
        - name: edge-service
          livenessProbe:
            initialDelaySeconds: 120
          readinessProbe:
            initialDelaySeconds: 60
