kubernetes/applications/edge-service/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-service-ingress
  labels:
    app: edge-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
