kubernetes/applications/edge-service/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/actuator" {
        deny all;
        return 403;
      }
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
